logs/turtlesim/build.make.153.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:234:3: error: expected unqualified-id before ‘return’
   return modified;
   ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:237:6: error: ‘Turtle’ has not been declared
 void Turtle::paint(QPainter& painter)
      ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In function ‘void paint(QPainter&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:240:15: error: ‘pos_’ was not declared in this scope
   QPointF p = pos_;
               ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:240:15: note: suggested alternative: ‘powq’
   QPointF p = pos_;
               ^~~~
               powq
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:243:13: error: ‘a’ was not declared in this scope
   p.rx() -= a;
             ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:244:13: error: ‘b’ was not declared in this scope
   p.ry() -= b;
             ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:245:24: error: ‘turtle_rotated_image_’ was not declared in this scope
   painter.drawImage(p, turtle_rotated_image_);
                        ^~~~~~~~~~~~~~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:246:27: error: ‘wayx’ was not declared in this scope
   painter.drawEllipse(int(wayx),int(wayy), 100, 100);
                           ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:246:37: error: ‘wayy’ was not declared in this scope
   painter.drawEllipse(int(wayx),int(wayy), 100, 100);
                                     ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: At global scope:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:268:1: error: expected declaration before ‘}’ token
 }
 ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp: In member function ‘void turtlesim::TurtleFrame::updateTurtles()’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:252:11: error: no match for ‘operator=’ (operand types are ‘std::map<std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> >::iterator {aka std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >}’ and ‘int’)
   for (it=0; it != end; ++it)
           ^
In file included from /usr/include/c++/7/map:60:0,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qmetatype.h:55,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:54,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qwidget.h:45,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qframe.h:44,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/QFrame:1,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:30,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:30:
/usr/include/c++/7/bits/stl_tree.h:256:12: note: candidate: std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >& std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >::operator=(const std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >&)
     struct _Rb_tree_iterator
            ^~~~~~~~~~~~~~~~~
/usr/include/c++/7/bits/stl_tree.h:256:12: note:   no known conversion for argument 1 from ‘int’ to ‘const std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >&’
/usr/include/c++/7/bits/stl_tree.h:256:12: note: candidate: std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >& std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >::operator=(std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >&&)
/usr/include/c++/7/bits/stl_tree.h:256:12: note:   no known conversion for argument 1 from ‘int’ to ‘std::_Rb_tree_iterator<std::pair<const std::__cxx11::basic_string<char>, boost::shared_ptr<turtlesim::Turtle> > >&&’
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle_frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
